samples/_failures_safe/1761547161_77a790_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9f3203f.c: In function ‘main’:
./samples/SAFE/__tmp_a9f3203f.c:166:5: error: expected declaration or statement at end of input
  166 |     print_matrix(mat2);
      |     ^~~~~~~~~~~~
